test/log/store/vsstcb1_v_u16_m.txt
vsstcb1_v_u16_m.c:16:2: warning: multi-line comment [-Wcomment]
   16 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vsstcb1_v_u16_m.c:18:44: warning: backslash and newline separated by space
   18 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vsstcb1_v_u16_m.c:20:40: warning: backslash and newline separated by space
   20 |  #define data_init(a, b, n, threshold) \
      |                                         
vsstcb1_v_u16_m.c:21:35: warning: backslash and newline separated by space
   21 |      for(int i = 0; i < n; i++) { \
      |                                    
vsstcb1_v_u16_m.c:22:40: warning: backslash and newline separated by space
   22 |              a[i] = random(threshold); \
      |                                         
vsstcb1_v_u16_m.c:23:27: warning: backslash and newline separated by space
   23 |              b[i] = a[i]; \
      |                            
vsstcb1_v_u16_m.c:29:6: warning: no previous prototype for 'vsstcb1_v_u16_m_golden' [-Wmissing-prototypes]
   29 | void vsstcb1_v_u16_m_golden(bool32_t mask,uint16_t base[],uint16_t *value,void *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~~
vsstcb1_v_u16_m.c: In function 'vsstcb1_v_u16_m_golden':
vsstcb1_v_u16_m.c:31:1: error: 'Operator' undeclared (first use in this function); did you mean 'perror'?
   31 | Operator Line --- TODO
      | ^~~~~~~~
      | perror
vsstcb1_v_u16_m.c:31:1: note: each undeclared identifier is reported only once for each function it appears in
vsstcb1_v_u16_m.c:31:9: error: expected ';' before 'Line'
   31 | Operator Line --- TODO
      |         ^~~~~
      |         ;
vsstcb1_v_u16_m.c:29:38: warning: unused parameter 'mask' [-Wunused-parameter]
   29 | void vsstcb1_v_u16_m_golden(bool32_t mask,uint16_t base[],uint16_t *value,void *exp_result) {
      |                             ~~~~~~~~~^~~~
vsstcb1_v_u16_m.c:29:52: warning: unused parameter 'base' [-Wunused-parameter]
   29 | void vsstcb1_v_u16_m_golden(bool32_t mask,uint16_t base[],uint16_t *value,void *exp_result) {
      |                                           ~~~~~~~~~^~~~~~
vsstcb1_v_u16_m.c:29:69: warning: unused parameter 'value' [-Wunused-parameter]
   29 | void vsstcb1_v_u16_m_golden(bool32_t mask,uint16_t base[],uint16_t *value,void *exp_result) {
      |                                                           ~~~~~~~~~~^~~~~
vsstcb1_v_u16_m.c:29:81: warning: unused parameter 'exp_result' [-Wunused-parameter]
   29 | void vsstcb1_v_u16_m_golden(bool32_t mask,uint16_t base[],uint16_t *value,void *exp_result) {
      |                                                                           ~~~~~~^~~~~~~~~~
vsstcb1_v_u16_m.c: In function 'main':
vsstcb1_v_u16_m.c:45:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   45 |     data_init_bool(mask, exp_mask, 32, 0xffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vsstcb1_v_u16_m.c:56:56: error: 'exp_result' undeclared (first use in this function)
   56 |     vsstcb1_v_u16_m_golden(exp_mask,exp_base,exp_value,exp_result);
      |                                                        ^~~~~~~~~~
vsstcb1_v_u16_m.c:56:28: error: incompatible type for argument 1 of 'vsstcb1_v_u16_m_golden'
   56 |     vsstcb1_v_u16_m_golden(exp_mask,exp_base,exp_value,exp_result);
      |                            ^~~~~~~~
      |                            |
      |                            uint64_t * {aka long long unsigned int *}
vsstcb1_v_u16_m.c:29:38: note: expected 'bool32_t' but argument is of type 'uint64_t *' {aka 'long long unsigned int *'}
   29 | void vsstcb1_v_u16_m_golden(bool32_t mask,uint16_t base[],uint16_t *value,void *exp_result) {
      |                             ~~~~~~~~~^~~~
vsstcb1_v_u16_m.c:59:5: note: use '-flax-vector-conversions' to permit conversions between vectors with differing element types or numbers of subparts
   59 |     vsstcb1_v_u16_m(mask,base,value);
      |     ^~~~~~~~~~~~~~~
vsstcb1_v_u16_m.c:59:31: error: incompatible type for argument 3 of 'vsstcb1_v_u16_m'
   59 |     vsstcb1_v_u16_m(mask,base,value);
      |                               ^~~~~
      |                               |
      |                               uint16x32_t
In file included from vsstcb1_v_u16_m.c:4:
/opt/analog/riscv/1.0.0/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:909:1: note: expected 'int16x32_t' but argument is of type 'uint16x32_t'
  909 | __RUGRATS_SCATTER_STORE (u, uint, 16, 32)
      | ^~~~~~~~~~~~~~~~~~~~~~~
vsstcb1_v_u16_m.c:59:5: error: too few arguments to function 'vsstcb1_v_u16_m'
   59 |     vsstcb1_v_u16_m(mask,base,value);
      |     ^~~~~~~~~~~~~~~
In file included from vsstcb1_v_u16_m.c:4:
/opt/analog/riscv/1.0.0/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:909:1: note: declared here
  909 | __RUGRATS_SCATTER_STORE (u, uint, 16, 32)
      | ^~~~~~~~~~~~~~~~~~~~~~~
vsstcb1_v_u16_m.c:62:9: error: 'i' undeclared (first use in this function)
   62 |     for(i=0;i<ELE_NUM;i++) {
      |         ^
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsstcb1_v_u16_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vsstcb1_v_u16_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vsstcb1_v_u16_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsstcb1_v_u16_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed